# copier-pulumi-project

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  copier.yml  mutex_queue  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  install-ci-tooling.py  on-create-command.sh  post-start-command.sh
.github/actions/install_deps/: action.yml
.github/actions/install_deps_uv/: action.yml
.github/reusable_workflows/: build-docker-image.yaml  hash_git_files.py
.github/workflows/: ci.yaml  get-values.yaml  pre-commit.yaml
extensions/: context.py
template/: .pre-commit-config.yaml  AGENTS.md  README.md.jinja
template/.claude/helpers/: merge-claude-settings.sh
template/.devcontainer/: devcontainer.json.jinja  docker-compose.yml.jinja  manual-setup-deps.sh.jinja  on-create-command.sh.jinja
template/.github/: dependabot.yml.jinja
template/.github/actions/install_deps_uv/: install-ci-tooling.ps1
template/.github/actions/pulumi_ephemeral_deploy/: action.yml
template/.github/workflows/: ci.yaml.jinja  get-values.yaml  pulumi-aws.yml
template/infrastructure/: pyproject.toml.jinja
template/infrastructure/src/infra/: pulumi_deploy.py.jinja
tests/copier_data/: data1.yaml  data2.yaml
