[project]
name = "copier-pulumi-project"
version = "0.1.0"
description = "Template for a Pulumi Project that is just creating infrastructure (no application code)"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    # Managed by upstream template
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pyright[nodejs]>=1.1.405",
    "copier>=9.10.2",
    "copier-template-extensions>=0.3.3"

    # Specific to this template


]
