[project]
name = "copier-pulumi-project"
version = "0.1.0"
description = "Template for a Pulumi Project that is just creating infrastructure (no application code)"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    # Specific to this template


    # Managed by upstream template
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pyright[nodejs]>=1.1.408",
    "ty>=0.0.19",
    "copier==9.12.0",
    "copier-template-extensions==0.3.3"
]
